# iconsmaker

./: .dockerignore  .gitignore  BUILDING.md  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml  icons.template.toml  icons.toml
.cargo/: config.toml
.github/workflows/: release.yml
docs/: linux-app-icon-asset-guide.md
packaging/: README.md  listing-text.md
packaging/aur/: .SRCINFO  PKGBUILD  README.md
packaging/copr/: description.md  iconsmaker.spec  trigger-copr-build.sh
packaging/debian/: README.md  build-source-package.sh  build-test-local.sh  changelog  control  copyright  docker-ppa-upload.sh  rules
packaging/homebrew/: iconsmaker.rb.tmpl
packaging/winget/: Ideocentric.iconsmaker.installer.yaml  Ideocentric.iconsmaker.locale.en-US.yaml  Ideocentric.iconsmaker.yaml  ideocentric.iconsmaker.installer.yaml  ideocentric.iconsmaker.locale.en-US.yaml  ideocentric.iconsmaker.yaml
src/: cli.rs  config.rs  main.rs  validate.rs
src/output/: icns.rs  ico.rs  metadata.rs  mod.rs  png.rs
src/packaging/: appimage.rs  flatpak.rs  mod.rs  snap.rs
src/render/: compose.rs  effects.rs  mod.rs  rasterize.rs  squircle.rs
tests/: bare_launch.rs
wix/: main.wxs
